Simplify home text

--- a/themes/djkonigi-2023/layouts/index.html
+++ b/themes/djkonigi-2023/layouts/index.html
@@ -5,7 +5,7 @@
       <div class="column is-two-thirds">
         <h1 class="home-logo">DJ KONIGI</h1>
         <p class="home-description mt-0 mb-1">Feel good vibes in the SF Bay Area</p>
-        <p class="mb-2">I'm an open format/multi-genre DJ with an eclectic sound and playing style. I craft a sound that fits your event. <a href="https://docs.google.com/forms/d/e/1FAIpQLSfHve_3pTqk7KtbmRcHhqGFh3_eQGckqj2bR97e9pbipTbOGw/viewform">Reach out</a> to find out if my <a href="/events">services</a> are a good fit or listen to <a href="mixes">mixes</a> and <a href="/music">music</a>.</strong> </p>
+        <p class="mb-2">I'm an open format/multi-genre DJ with an eclectic sound and playing style. <a href="https://docs.google.com/forms/d/e/1FAIpQLSfHve_3pTqk7KtbmRcHhqGFh3_eQGckqj2bR97e9pbipTbOGw/viewform">Reach out</a> to find out if my <a href="/events">services</a> are a good fit for your event, or listen to <a href="mixes">mixes</a> and <a href="/music">music</a>.</strong> </p>
         <p class="mt-4 mb-4"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfHve_3pTqk7KtbmRcHhqGFh3_eQGckqj2bR97e9pbipTbOGw/viewform" class="button is-medium">Contact Me for Booking</a></p>
       </div>
   </div>
